--- a/examples/frontend/index.html
+++ b/examples/frontend/index.html
@@ -58,7 +58,7 @@
     <div class="clear"> </div>
     
     <div id="paginator" class="container">
-        <h3>Paginator:</h3>
+        <h3>Pagination control</h3>
         <input type="button" ng-click="Song.page.first()" ng-disabled="!Song.page.meta.previous" value="First">
         <input type="button" ng-click="Song.page.previous()" ng-disabled="!Song.page.meta.previous" value="Previous">
         <b>{{Song.page.index}}/{{Song.page.len}}</b>
