--- a/examples/frontend/index.html
+++ b/examples/frontend/index.html
@@ -5,7 +5,7 @@
     <title>Simple View</title>
     <script src="lib/angular-1.2.16/angular.min.js"></script>
     <script src="lib/angular-1.2.16/angular-resource.min.js"></script>
-    <script src="lib/angular-resource-tastypie-1.0.min.js"></script>
+    <script src="lib/angular-resource-tastypie.min.js"></script>
     <script src="controller.js"></script>
     
     <style>
@@ -74,7 +74,7 @@
                 <th>Id</th>
                 <th>Rank</th>
                 <th>Song</th>
-                <th>artist</th>
+                <th>Artist</th>
                 <th colspan="2"></th>
             </thead>
             <tbody>
