--- a/examples/frontend/index.html
+++ b/examples/frontend/index.html
@@ -112,6 +112,15 @@
         <h4>All with just a single object:</h4>
         $scope.Song = new $tastypieResource('song', {limit:5});
     </p>
-    Have a good time!
+    Have a good time!<br><br>
+    <a href="http://br.linkedin.com/in/mwferretti">
+            <img 
+                 src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x33_pt_BR.png?locale=" 
+                 width="160" 
+                 height="33" 
+                 border="0" 
+                 alt="View Marcos W. Ferretti profile on LinkedIn"
+            >
+    </a>
 </body>
 </html>
