--- a/examples/frontend/index.html
+++ b/examples/frontend/index.html
@@ -35,22 +35,9 @@
         <h3>Form</h3>
         <form name="myForm">
             ID: {{song.id}} <br>
-            RANK: <input type="number" name="input" ng-model="song.rank" value="{{song.rank}}" required> 
-            <span 
-                  class="error" 
-                  ng-show="myForm.input.$error.required"
-            >
-            Required!
-            </span>
-            <span 
-                  class="error" 
-                  ng-show="myForm.input.$error.number"
-            >
-            Not valid number!
-            </span><br>
+            RANK: <input type="number" ng-model="song.rank" value="{{song.rank}}" required> <br>
             SONG: <input type="text" ng-model="song.song" value="{{song.song}}" required> <br>
-            ARTIST: <input type="text" ng-model="song.artist" value="{{song.artist}}" required> <br>
-            
+            ARTIST: <input type="text" ng-model="song.artist" value="{{song.artist}}" required> <br>            
             <input ng-disabled="!myForm.$valid" type="button" ng-click="song.$save()" value="Save"> 
             <input ng-disabled="!myForm.$valid" type="button" ng-click="song.$clear()" value="Clear">
         </form>
@@ -73,7 +60,7 @@
     </div>
     
     <div class="container group">
-        <h3>Limit</h3>
+        <h3>Limit server-side</h3>
         <select 
                 ng-options="limit for limit in [5, 10, 15]" 
                 ng-model="Song.defaults.limit"
@@ -95,11 +82,11 @@
                 <th colspan="2"></th>
             </thead>
             <tbody>
-                <tr ng-repeat="obj in Song.page.objects" name="myItem">
+                <tr ng-repeat="obj in Song.page.objects">
                     <td>{{obj.id}}</td>
-                    <td><input type="number" name="input" ng-model="obj.rank" value="{{obj.rank}}" required></td>
-                    <td><input type="text" name="input" ng-model="obj.song" value="{{obj.song}}" required></td>
-                    <td><input type="text" name="input" ng-model="obj.artist" value="{{obj.artist}}" required></td>
+                    <td><input type="number" ng-model="obj.rank" value="{{obj.rank}}" required></td>
+                    <td><input type="text" ng-model="obj.song" value="{{obj.song}}" required></td>
+                    <td><input type="text" ng-model="obj.artist" value="{{obj.artist}}" required></td>
                     <td><input type="button" ng-click="obj.$save()" value="Save"></td>
                     <td><input type="button" ng-click="obj.$delete()" value="Delete"></td>
                 </tr>
@@ -113,6 +100,7 @@
         $scope.Song = new $tastypieResource('song', {limit:5});
     </p>
     Have a good time!<br><br>
+    <a href="http://opensource.org/"><img src="lib/osi_logo_100X133_90ppi.png"></a>
     <a href="http://br.linkedin.com/in/mwferretti">
             <img 
                  src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x33_pt_BR.png?locale=" 
