--- a/examples/frontend/index.html
+++ b/examples/frontend/index.html
@@ -5,7 +5,7 @@
     <title>Simple View</title>
     <script src="lib/angular-1.2.16/angular.min.js"></script>
     <script src="lib/angular-1.2.16/angular-resource.min.js"></script>
-    <script src="lib/angular-resource-tastypie.js"></script>
+    <script src="lib/angular-resource-tastypie.min.js"></script>
     <script src="controller.js"></script>
     
     <style>
